--- a/HomeworkProjects/NaturalLanguageProcessing/TextPreProcessingColab.ipynb
+++ b/HomeworkProjects/NaturalLanguageProcessing/TextPreProcessingColab.ipynb
@@ -33,7 +33,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/loupendley/Thinkful/blob/master/.%5Cstuff%5CTextPreProcessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/loupendley/Thinkful/blob/master/HomeworkProjects/NaturalLanguageProcessing/TextPreProcessingColab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "90Hch0kNdJGB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **PreProcessing for Cornell Movie Dialogs Corpus Data**\n"
       ]
     },
     {
@@ -47,7 +57,12 @@
         "from collections import Counter\n",
         "import nltk\n",
         "import spacy\n",
-        "import re"
+        "import re\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import scipy\n",
+        "import matplotlib\n",
+        "import matplotlib.pyplot as plt\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -55,18 +70,90 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nJSHjeHVA2JJ",
+        "id": "FDuW7m3TdghL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def file_stuff(path, filename):\n",
+        "    \n",
+        "    # zip_file = ZipFile(zipfil\n",
+        "    print(\"path = {}, and filename = {}\".format(path, filename))\n",
+        "    fullfilename = \"{}\".format(path+'/'+filename)\n",
+        "    print(\"fullfilename = {}\".format(path+'/'+filename))\n",
+        "    df = pd.read_json(fullfilename)\n",
+        "    # df = pd.read_csv(zip_file.open(filename), dtype=dtypes, usecols=usecols)\n",
+        "\n",
+        "    print(\"There are {} rows in this file.\".format(df.shape[0]))\n",
+        "\n",
+        "    # patients_df = pd.read_json('E:/datasets/patients.json')\n",
+        "    \n",
+        "    return df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6VfL_elj9sa3",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 232
         },
-        "outputId": "1b150235-cbd1-49ae-9ac8-4a504d9cb7c5"
+        "outputId": "99bba3d9-f6bb-46c1-ad58-39edf65342f3"
+      },
+      "source": [
+        "import os\n",
+        "path = os.getcwd()\n",
+        "\n",
+        "print(path)\n",
+        "\n",
+        "arr = os.listdir('.')\n",
+        "print(arr)\n",
+        "dtypes = 'string'\n",
+        "usecols = 'dialogs'\n",
+        "dialogs = file_stuff(\".\", 'dialogs.json')\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n",
+            "['.config', 'sample_data']\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-b560d47f089f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'string'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0musecols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'dialogs'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdialogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile_stuff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'dialogs.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'file_stuff' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nJSHjeHVA2JJ",
+        "colab_type": "code",
+        "outputId": "1b150235-cbd1-49ae-9ac8-4a504d9cb7c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
       },
       "source": [
         "nltk.download('gutenberg')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,11 +195,11 @@
       "metadata": {
         "id": "4ZGR5rCgA2JN",
         "colab_type": "code",
+        "outputId": "09185e80-f237-49a9-f4cb-1504bae74773",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "09185e80-f237-49a9-f4cb-1504bae74773"
+        }
       },
       "source": [
         "# import the data we just downloaded\n",
@@ -124,7 +211,7 @@
         "# print the first 100 characters of Alice\n",
         "print('\\nRaw:\\n', alice[0:100])"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,11 +243,11 @@
       "metadata": {
         "id": "fBlqm58YA2JR",
         "colab_type": "code",
+        "outputId": "66ab3989-bfb3-40a4-b3be-85216aa8d31b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "66ab3989-bfb3-40a4-b3be-85216aa8d31b"
+        }
       },
       "source": [
         "# this pattern matches all text between square brackets\n",
@@ -171,7 +258,7 @@
         "# print the first 100 characters of Alice again\n",
         "print(\"Title removed:\", alice[0:100])"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,11 +278,11 @@
       "metadata": {
         "id": "SZPrrKW7A2JT",
         "colab_type": "code",
+        "outputId": "7631c270-1fd9-44c7-bf55-bdfd887dca8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "7631c270-1fd9-44c7-bf55-bdfd887dca8d"
+        }
       },
       "source": [
         "# now we'll match and remove chapter headings\n",
@@ -205,7 +292,7 @@
         "# ok, what does it look like now\n",
         "print('Chapter headings removed from alice:', alice[0:102])"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,11 +313,11 @@
       "metadata": {
         "id": "0tlemc6NA2JW",
         "colab_type": "code",
+        "outputId": "95073a29-9085-4e26-db02-f0832132f5d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "95073a29-9085-4e26-db02-f0832132f5d6"
+        }
       },
       "source": [
         "# remove newlines and other extra whitespaces by splitting and rejoining\n",
@@ -240,7 +327,7 @@
         "# almost done with cleanup?  let's check it out\n",
         "print('Extra whitespace removed:\\n', alice[0:103])"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,11 +372,11 @@
       "metadata": {
         "id": "-x2BmyvyA2Jc",
         "colab_type": "code",
+        "outputId": "ee39d38d-5a10-4273-e553-122d2b7bbb6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "ee39d38d-5a10-4273-e553-122d2b7bbb6e"
+        }
       },
       "source": [
         "# let's explore the objects that we've built...\n",
@@ -299,7 +386,7 @@
         "print(\"the first three tokens are: '{}'\".format(alice_doc[:3]))\n",
         "print(\"the type of each token is {}\".format(type(alice_doc[0])))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,16 +429,16 @@
       "metadata": {
         "id": "9G702kWCA2Jg",
         "colab_type": "code",
+        "outputId": "0b802b4e-34b2-4edd-8913-07377775b1e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "0b802b4e-34b2-4edd-8913-07377775b1e7"
+        }
       },
       "source": [
         "print(alice_without_stopwords[0:30])"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,11 +454,11 @@
       "metadata": {
         "id": "_HHGp32NA2Jj",
         "colab_type": "code",
+        "outputId": "a4880fca-8394-4161-ff41-dde43f0f57f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "a4880fca-8394-4161-ff41-dde43f0f57f1"
+        }
       },
       "source": [
         "# utility function to calculate how frequently words appear in the text\n",
@@ -392,7 +479,7 @@
         "print('\\nAlice', alice_word_freq)\n",
         "print('Persuasion:', persuasion_word_freq)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,11 +507,11 @@
       "metadata": {
         "id": "xMXLfjFoA2Jm",
         "colab_type": "code",
+        "outputId": "67f0831e-5e3f-474f-f3ef-eca0b2dfb7b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "67f0831e-5e3f-474f-f3ef-eca0b2dfb7b0"
+        }
       },
       "source": [
         "def lemma_frequencies(text):\n",
@@ -445,7 +532,7 @@
         "print('\\nAlice:' ,alice_lemma_freq)\n",
         "print('Persuasion:' ,persuasion_lemma_freq)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,11 +550,11 @@
       "metadata": {
         "id": "m4x1YR7rA2Jo",
         "colab_type": "code",
+        "outputId": "bf7d9b30-f346-460d-af65-a8390d6ed9bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "bf7d9b30-f346-460d-af65-a8390d6ed9bf"
+        }
       },
       "source": [
         "alice_lemma_common = [pair[0] for pair in alice_lemma_freq]\n",
@@ -476,7 +563,7 @@
         "print('Unique to Alice:', set(alice_lemma_common) - set(persuasion_lemma_common))\n",
         "print('Unique to Persuasion:', set(persuasion_lemma_common) - set(alice_lemma_common))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,11 +590,11 @@
       "metadata": {
         "id": "eXLH9MnUA2Jr",
         "colab_type": "code",
+        "outputId": "84a63268-08b0-4949-f48e-231468782669",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "84a63268-08b0-4949-f48e-231468782669"
+        }
       },
       "source": [
         "# initial exploration of sentences\n",
@@ -517,7 +604,7 @@
         "example_sentence = sentences[2]\n",
         "print(\"Here is an example: \\n{}\\n\".format(example_sentence))"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,11 +623,11 @@
       "metadata": {
         "id": "0ppXfEeNA2Jv",
         "colab_type": "code",
+        "outputId": "d9bf2965-66ba-4a63-de2d-c3e1a18bb48d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "d9bf2965-66ba-4a63-de2d-c3e1a18bb48d"
+        }
       },
       "source": [
         "# look at some metrics around this sentence\n",
@@ -551,7 +638,7 @@
         "print(\"this sentence is {}\".format(example_words))\n",
         "print((\"There are {} words in this sentence, and {} of them are unique\".format(len(example_words), len(unique_words))))"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
