--- a/HomeworkProjects/NaturalLanguageProcessing/TextPreProcessingColab.ipynb
+++ b/HomeworkProjects/NaturalLanguageProcessing/TextPreProcessingColab.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "TextPreProcessing.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -81,7 +82,7 @@
         "    print(\"path = {}, and filename = {}\".format(path, filename))\n",
         "    fullfilename = \"{}\".format(path+'/'+filename)\n",
         "    print(\"fullfilename = {}\".format(path+'/'+filename))\n",
-        "    df = pd.read_json(fullfilename)\n",
+        "    df = pd.read_json(fullfilename,encoding = \"utf-8\")\n",
         "    # df = pd.read_csv(zip_file.open(filename), dtype=dtypes, usecols=usecols)\n",
         "\n",
         "    print(\"There are {} rows in this file.\".format(df.shape[0]))\n",
@@ -100,42 +101,66 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 232
+          "height": 425
         },
-        "outputId": "99bba3d9-f6bb-46c1-ad58-39edf65342f3"
+        "outputId": "efa66fe8-1cd9-47ea-fd1c-ea9ea65cf35d"
       },
       "source": [
-        "import os\n",
-        "path = os.getcwd()\n",
+        "# import os\n",
+        "# path = os.getcwd()\n",
         "\n",
-        "print(path)\n",
+        "# print(path)\n",
         "\n",
-        "arr = os.listdir('.')\n",
-        "print(arr)\n",
-        "dtypes = 'string'\n",
-        "usecols = 'dialogs'\n",
-        "dialogs = file_stuff(\".\", 'dialogs.json')\n"
+        "# arr = os.listdir('.')\n",
+        "# print(arr)\n",
+        "# dtypes = 'string'\n",
+        "# usecols = 'dialogs'\n",
+        "dialogs = file_stuff(\".\", 'dialogs.json')\n",
+        "dialogs.dialogs.head(20)\n",
+        "# print(\"dialogs.dialogs is a {} datatype\".format(type(dialogs.dialogs[0])))"
       ],
-      "execution_count": 2,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content\n",
-            "['.config', 'sample_data']\n"
+            "path = ., and filename = dialogs.json\n",
+            "fullfilename = ./dialogs.json\n",
+            "There are 304446 rows in this file.\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-b560d47f089f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'string'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0musecols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'dialogs'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdialogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile_stuff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'dialogs.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'file_stuff' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     Can we make this quick?  Roxanne Korrine and A...\n",
+              "1     Well, I thought we'd start with pronunciation,...\n",
+              "2     Not the hacking and gagging and spitting part....\n",
+              "3     Okay... then how 'bout we try out some French ...\n",
+              "4     You're asking me out.  That's so cute. What's ...\n",
+              "5                                            Forget it.\n",
+              "6     No, no, it's my fault -- we didn't have a prop...\n",
+              "7                                              Cameron.\n",
+              "8     The thing is, Cameron -- I'm at the mercy of a...\n",
+              "9        Seems like she could get a date easy enough...\n",
+              "10                                                 Why?\n",
+              "11    Unsolved mystery.  She used to be really popul...\n",
+              "12                                      That's a shame.\n",
+              "13       Gosh, if only we could find Kat a boyfriend...\n",
+              "14                            Let me see what I can do.\n",
+              "15                       C'esc ma tete. This is my head\n",
+              "16             Right.  See?  You're ready for the quiz.\n",
+              "17    I don't want to know how to say that though.  ...\n",
+              "18                 That's because it's such a nice one.\n",
+              "19                                       Forget French.\n",
+              "Name: dialogs, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
         }
       ]
     },
@@ -151,7 +176,7 @@
         }
       },
       "source": [
-        "nltk.download('gutenberg')"
+        "# nltk.download('gutenberg')"
       ],
       "execution_count": 0,
       "outputs": [
@@ -202,14 +227,14 @@
         }
       },
       "source": [
-        "# import the data we just downloaded\n",
-        "from nltk.corpus import gutenberg\n",
+        "# # import the data we just downloaded\n",
+        "# from nltk.corpus import gutenberg\n",
         "\n",
-        "persuasion = gutenberg.raw('austen-persuasion.txt')\n",
-        "alice = gutenberg.raw('carroll-alice.txt')\n",
+        "# persuasion = gutenberg.raw('austen-persuasion.txt')\n",
+        "# alice = gutenberg.raw('carroll-alice.txt')\n",
         "\n",
-        "# print the first 100 characters of Alice\n",
-        "print('\\nRaw:\\n', alice[0:100])"
+        "# # print the first 100 characters of Alice\n",
+        "# print('\\nRaw:\\n', alice[0:100])"
       ],
       "execution_count": 0,
       "outputs": [
@@ -243,77 +268,44 @@
       "metadata": {
         "id": "fBlqm58YA2JR",
         "colab_type": "code",
-        "outputId": "66ab3989-bfb3-40a4-b3be-85216aa8d31b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        }
+        "colab": {}
       },
       "source": [
-        "# this pattern matches all text between square brackets\n",
-        "pattern = \"[\\[].*?[\\]]\"\n",
-        "persuasion = re.sub(pattern, \"\", persuasion)\n",
-        "alice = re.sub(pattern, \"\", alice)\n",
+        "# # this pattern matches all text between square brackets\n",
+        "# pattern = \"[\\[].*?[\\]]\"\n",
+        "# persuasion = re.sub(pattern, \"\", persuasion)\n",
+        "# alice = re.sub(pattern, \"\", alice)\n",
         "\n",
-        "# print the first 100 characters of Alice again\n",
-        "print(\"Title removed:\", alice[0:100])"
+        "# # print the first 100 characters of Alice again\n",
+        "# print(\"Title removed:\", alice[0:100])"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Title removed: \n",
-            "\n",
-            "CHAPTER I. Down the Rabbit-Hole\n",
-            "\n",
-            "Alice was beginning to get very tired of sitting by her sister on\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SZPrrKW7A2JT",
         "colab_type": "code",
-        "outputId": "7631c270-1fd9-44c7-bf55-bdfd887dca8d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+        "colab": {}
       },
       "source": [
-        "# now we'll match and remove chapter headings\n",
-        "persuasion = re.sub(r'Chapter \\d+', '', persuasion)\n",
-        "alice = re.sub(r'CHAPTER .*', '', alice)\n",
+        "# # now we'll match and remove chapter headings\n",
+        "# persuasion = re.sub(r'Chapter \\d+', '', persuasion)\n",
+        "# alice = re.sub(r'CHAPTER .*', '', alice)\n",
         "\n",
-        "# ok, what does it look like now\n",
-        "print('Chapter headings removed from alice:', alice[0:102])"
+        "# # ok, what does it look like now\n",
+        "# print('Chapter headings removed from alice:', alice[0:102])"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Chapter headings removed from alice: \n",
-            "\n",
-            "\n",
-            "\n",
-            "Alice was beginning to get very tired of sitting by her sister on the\n",
-            "bank, and of having nothing \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0tlemc6NA2JW",
         "colab_type": "code",
-        "outputId": "95073a29-9085-4e26-db02-f0832132f5d6",
+        "outputId": "e091a8c5-bb2a-4ef6-a34e-7b57a4bef51a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -321,19 +313,25 @@
       },
       "source": [
         "# remove newlines and other extra whitespaces by splitting and rejoining\n",
-        "persuasion = ' '.join(persuasion.split())\n",
-        "alice = ' '.join(alice.split())\n",
+        "# persuasion = ' '.join(persuasion.split())\n",
+        "# alice = ' '.join(alice.split())\n",
+        "dialogs3 = ' '.join(dialogs.dialogs.to_string())\n",
         "\n",
-        "# almost done with cleanup?  let's check it out\n",
-        "print('Extra whitespace removed:\\n', alice[0:103])"
+        "# # almost done with cleanup?  let's check it out\n",
+        "# print('Extra whitespace removed:\\n', alice[0:103])\n",
+        "# print(\"dialogs.dialogs[0] = {}\".format(dialogs.dialogs[0]))\n",
+        "# print(\"type of dialogs.dialogs[0] is {}\".format(type(dialogs.dialogs[0])))\n",
+        "print(\"length of dialogs3 is {}\".format(len(dialogs3)))\n",
+        "# print(\"dialogs3 sample = {}\".format(dialogs3))\n",
+        "print(\"dialogs3 is a {} datatype.\".format(type(dialogs3)))"
       ],
-      "execution_count": 0,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Extra whitespace removed:\n",
-            " Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do\n"
+            "length of dialogs3 is 36533517\n",
+            "dialogs3 is a <class 'str'> datatype.\n"
           ],
           "name": "stdout"
         }
@@ -354,18 +352,38 @@
       "metadata": {
         "id": "Z1fRWsZcA2JZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 354
+        },
+        "outputId": "4b92ead0-864d-413b-ee36-aaac979c5b82"
       },
       "source": [
         "nlp = spacy.load('en')\n",
         "\n",
         "# all the processing work is done below, sit it may take a while, Lou.\n",
         "\n",
-        "alice_doc = nlp(alice)\n",
-        "persuasion_doc = nlp(persuasion)"
+        "# alice_doc = nlp(alice)\n",
+        "# persuasion_doc = nlp(persuasion)\n",
+        "\n",
+        "dialogs = nlp(dialogs3)\n",
+        "print(\"length of dialogs_dialogs = {}\".format(len(dialogs)))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-278a2cf739f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# persuasion_doc = nlp(persuasion)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdialogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnlp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdialogs3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"length of dialogs_dialogs = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdialogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/spacy/language.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, text, disable, component_cfg)\u001b[0m\n\u001b[1;32m    427\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_length\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m             raise ValueError(\n\u001b[0;32m--> 429\u001b[0;31m                 \u001b[0mErrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE088\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    430\u001b[0m             )\n\u001b[1;32m    431\u001b[0m         \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_doc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: [E088] Text of length 36533517 exceeds maximum of 1000000. The v2.x parser and NER models require roughly 1GB of temporary memory per 100,000 characters in the input. This means long texts may cause memory allocation errors. If you're not using the parser or NER, it's probably safe to increase the `nlp.max_length` limit. The limit is in number of characters, so you can check whether your inputs are too long by checking `len(text)`."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
